update index page

--- a/homeDemo.html
+++ b/homeDemo.html
@@ -250,6 +250,16 @@
               
               <img src="assets/images/Blog.png" style="width: 14px;">
               </li>
+              <li
+              class="animation"
+              data-animation="fadeInDown"
+              data-animation-delay="1.9s"
+            >
+            <a target="blank"
+            href="https://medium.com/rivera-money"
+           class="anchar_hvr"
+            >CBP</a>
+            </li>
               <!-- <li
                 class="animation"
                 data-animation="fadeInDown"
@@ -332,25 +342,25 @@
        </div>
        <div class="gateWay_flex_mobile">
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/mbl_sec_sample.webp" class="wdt_90"></div>
+            <div class="mb-3"><img src="assets/images/inestor_mbl1.png" class="wdt_90"></div>
             <div class="list_header mb-2">One stop solution for DeFi investment​</div>
             <div>Explore top crypto assets and find  best DeFi opportunities aggregated through one easy-to-use interface
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/mbl_sec_sample.webp" class="wdt_90"></div>
+            <div class="mb-3"><img src="assets/images/inestor_mbl2.png" class="wdt_90"></div>
             <div class="list_header mb-2">Educated & risk-assesed positions ​​</div>
             <div>With the in-app guide, take educated yield-farming decisions with strategy mechanicm and risks explained
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner">
-            <div class="mb-3"><img src="assets/images/mbl_sec_sample.webp" class="wdt_90"></div>
+            <div class="mb-3"><img src="assets/images/inestor_mbl3.png" class="wdt_90"></div>
             <div class="list_header mb-2">Marketplace for advance strategies</div>
             <div>A marketplace for advanced algorithms operating cross-chain to unleash the true potential of yield farming
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner">
-            <div class="mb-3"><img src="assets/images/mbl_sec_sample.webp" class="wdt_90"></div>
+            <div class="mb-3"><img src="assets/images/inestor_mblt4.png" class="wdt_90"></div>
             <div class="list_header mb-2">Bridging to DeFi safely and seamlessly</div>
             <div>With vetted protocols, biometric auto-recovery wallet, built-in fiat ramp & cross-chain asset swaps; it is DeFi minus complexity
             </div>
@@ -394,7 +404,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12">
-            <div class="text-right">
+            <div class="abt_img_pos">
               <img class="aboutimg2"
                 src="assets/images/about_img2.png"
                 alt="aboutimg2"
@@ -483,25 +493,25 @@
     </div>
   </div>
     <div class="gateWay_flex_mobile">
-      <div class="gateWay_flex_mobile_inner mb-5">
-        <div class="mb-3 sl_img_pddng"><img src="assets/images/offer1.png"></div>
-        <div class="list_header mb-1">RAFT</div>
-        <div class="list_header mb-2">Crypto Wallet and Yield Strategy Marketplace​</div>
+      <div class="gateWay_flex_mobile_inner mb-5 mt-5">
+        <div class="mb-3 sl_img_pddng"><img class="product_listing_backgrnd_mbl_img" src="assets/images/offer1.png"></div>
+        <div class="list_header mb-1">RIVERA</div>
+        <div class="list_header mb-2">Crypto Wallet &  Strategy Marketplace​</div>
         <div>An intutive crypto wallet with marketplace for vetted DeFi protocols & yield strategies.​ Secure non-custodial wallet with biometric activated auto-recovery.
         </div>
       </div>
       <div class="gateWay_flex_mobile_inner mb-5">
-        <div class="mb-3 sl_img_pddng"><img src="assets/images/offer2.png"></div>
-        <div class="list_header mb-1">SAILOR</div>
-        <div class="list_header mb-2">Rivera Native Investment Strategy Protocol​​</div>
+        <div class="mb-3 sl_img_pddng"><img class="product_listing_backgrnd_mbl_img" src="assets/images/offer2.png"></div>
+        <div class="list_header mb-1">SEAL</div>
+        <div class="list_header mb-2">Cross-chain Yield Farming Protocol​​​</div>
         <div>Earn industry-leading APY on your crypto holdings with our risk-assessed native investment protocol built with combinations of DeFi yield strategies.
         </div>
       </div>
       <div class="gateWay_flex_mobile_inner">
-        <div class="mb-3 sl_img_pddng"><img src="assets/images/offer3.png"></div>
-        <div class="list_header mb-1">EDGE</div>
-        <div class="list_header mb-2">Cross Chain Strategy Development Infrastructure</div>
-        <div>SDK and UI toolkit for fund managers to build cross-chain investment flows for listed crypto assets leveraging Rivera approved DeFi protocols.
+        <div class="mb-3 sl_img_pddng"><img class="product_listing_backgrnd_mbl_img" src="assets/images/offer3.png"></div>
+        <div class="list_header mb-1">REEF</div>
+        <div class="list_header mb-2">Deep Liquidity Lending Protocol </div>
+        <div>Enable deep liquidity for your investments. Take loans in a wide range of crypto and synthetic assets without exiting your positions. 
         </div>
       </div>
    </div>
