--- a/index.html
+++ b/index.html
@@ -256,17 +256,10 @@
               data-animation-delay="1.9s"
             >
             <a target="blank"
-            href="https://medium.com/rivera-money"
+            href="https://rivera.money/cbp/"
            class="anchar_hvr"
             >CBP</a>
             </li>
-              <!-- <li
-                class="animation"
-                data-animation="fadeInDown"
-                data-animation-delay="2s"
-              >
-              FAQs         
-              </li> -->
               <li
               class="animation"
               data-animation="fadeInDown"
@@ -396,7 +389,7 @@
                   <div class="button_align">
                 
                     <div>
-                      <button class="btn transparent_btn" onclick="visitBlog()">Learn more</button>
+                      <button class="btn transparent_btn" onclick="window.open('https://rivera.money/cbp/', '_blank')">Learn more</button>
                     </div>
                   </div>
                 </div>
