image ann content update

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
               data-animation="fadeInDown"
               data-animation-delay="1.9s"
             >
-            <a target="blank"
+            <a 
             href="https://rivera.money/cbp/"
            class="anchar_hvr"
             >CBP</a>
@@ -373,6 +373,9 @@
             <div>
               <div class="list_inner">
                 <div>
+                  <div>
+                    <img src="assets/images/tag.png" class="img_tag">
+                  </div>
                   <div class="section_subheader mb-2">Earn up to 21% APY on your stablecoins</div>
                   <div class="mb-4">
                     Maximize your return on stablecoins (USDT & USDC) with advanced yield strategies. Withdraw anytime to your bank account.
@@ -380,7 +383,7 @@
                   <div class="button_align">
                 
                     <div>
-                      <button class="btn transparent_btn" onclick="window.open('https://rivera.money/cbp/', '_blank')">Learn more</button>
+                      <button class="btn transparent_btn" onclick="window.location.href='https://rivera.money/cbp/'">Learn more</button>
                     </div>
                   </div>
                 </div>
@@ -505,14 +508,14 @@
     <!-- END SECTION SERVICES -->
 
     <!-- START SECTION SERVICES -->
-    <!-- <section id="investment" class="small_pt">
+    <section id="investment" class="small_pt" style="margin-bottom: -30px;">
       <div class="custom-container">
         <div class="section_subheader text-center mb-4 hrd_section_res">
-          Your gateway to DeFi earnings
+          Join the DeFi club
         </div>
         <div class="text-center mb-5 txt_wht text-md-80">
-          DeFi investors can directly participate in governing the new generaton financial applications, replacing legacy intermediaries & earning higher returns. However, the current approach to enter DeFi is technically complex and not so user friendly. 
-We are building an all-in-one mobile app for all your DeFi needs.
+          Decentralize Finance is more than a means to grow your money. It is a paradigm shift fixing the centralization of financial power and giving you complete control of your money. 
+          Enjoy the exclusive benefits and true power of DeFi with Rivera.
         </div>
         <div class="flex_cnt">
           <div class="flip-div gateway_section">
@@ -520,9 +523,9 @@ We are building an all-in-one mobile app for all your DeFi needs.
               <div class="front">
                 <div class="card">
                   <div class="card-body text-center">
-                    <div class="list_header txt_algn_lft">Connect anytime, anywhere</div>
+                    <div class="list_header txt_algn_lft">Deep liquidity on your investments</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/gateway1.png" class="flt_lft" />
+                      <img src="assets/images/gateway111.png" class="flt_lft" />
                     </div>
                   </div>
                 </div>
@@ -530,7 +533,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
               <div class="back">
                 <div class="card">
                     <div class="card-body">
-                      <div>Connect from anywhere with our intutive mobile app. Buy crypto assets and participate in DeFi with a click.</div>
+                      <div>Receive liquid tokens for your investments. The liquid tokens can act as collaterals on Rivera REEF and various DeFi lending protocols, enabling you deep liquidity on your deposits.</div>
                     </div>
                   </div>
               </div>
@@ -542,9 +545,9 @@ We are building an all-in-one mobile app for all your DeFi needs.
               <div class="front">
                 <div class="card">
                   <div class="card-body text-center">
-                    <div class="list_header txt_algn_lft">You are always in control</div>
+                    <div class="list_header txt_algn_lft">Community owned and governed</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/gateway2.png" class="flt_lft" />
+                      <img src="assets/images/gateway222.png" class="flt_lft" />
                     </div>
                   </div>
                 </div>
@@ -552,7 +555,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
               <div class="back">
                 <div class="card">
                     <div class="card-body">
-                        <div>Your crypto assets are never locked and you can exit your positions at any time. Instant deposit & withdrawal.</div>
+                        <div>Powered by SHELL tokens, Rivera DAO is designed to be owned and operated by the community. Participate in the DAO governance and earn revenues collected by the various streams of Rivera operations.</div>
                       </div>
                   </div>
               </div>
@@ -563,7 +566,28 @@ We are building an all-in-one mobile app for all your DeFi needs.
               <div class="front">
                 <div class="card">
                   <div class="card-body text-center">
-                    <div class="list_header txt_algn_lft">Funds safety, without headache</div>
+                    <div class="list_header txt_algn_lft">Your funds always in your control</div>
+                    <div class="stack_img mt_4rm">
+                      <img src="assets/images/gateway2.png" class="flt_lft" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="back">
+                <div class="card">
+                    <div class="card-body">
+                        <div>Censorship resistant, your funds are in your control only, even while they are generating yields. Biometric auto-recovery of wallet  and smart contract enabled social recovery for your peace of mind</div>
+                      </div>
+                  </div>
+              </div>
+            </div>
+          </div>
+          <div class="flip-div gateway_section">
+            <div class="flip-main">
+              <div class="front">
+                <div class="card">
+                  <div class="card-body text-center">
+                    <div class="list_header txt_algn_lft">Trust-free environment</div>
                     <div class="stack_img mt_4rm">
                       <img src="assets/images/gateway3.png" class="flt_lft" />
                     </div>
@@ -573,29 +597,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
               <div class="back">
                 <div class="card">
                     <div class="card-body">
-                        <div>All your assets are safeguarded with our licensed and compliant partners who are regularly audited.</div>
-                      </div>
-                  </div>
-              </div>
-            </div>
-          </div>
-          <div class="flip-div gateway_section">
-            <div class="flip-main">
-              <div class="front">
-                <div class="card">
-                  <div class="card-body text-center">
-                    <div class="list_header txt_algn_lft">Well researched
-                      protocols only</div>
-                    <div class="stack_img mt_4rm">
-                      <img src="assets/images/gateway2.png" class="flt_lft" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="back">
-                <div class="card">
-                    <div class="card-body">
-                      <div>We do the heavy lifting, so you don't have to. All protocols listed in Rivera are well vetted and audited for security purpose.</div>
+                      <div>Investment pools are fully managed by smart contracts and governed by Rivera DAO. Enjoy fully decentralized and trust-free operations with built-in liquidity management and funds rebalancing.</div>
                     </div>
                   </div>
               </div>
@@ -603,7 +605,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- END SECTION SERVICES -->
 
     <!-- START SECTION SERVICES -->
@@ -1465,12 +1467,15 @@ We are building an all-in-one mobile app for all your DeFi needs.
                   Know more
                 </h4>
 
-                <ul class="footer_link list_arrow">
+                <ul class="footer_link list_arrow bck_dspl">
                   <!-- <li>
                     <a href="#" >FAQs</a>
                   </li> -->
-                  <li>
+                  <li style="margin-right: 50%">
                     <a href="https://medium.com/rivera-money" target="_blank" class="anchar_hvr">Blog</a>
+                  </li>
+                  <li>
+                    <a href="https://rivera.money/cbp/" class="anchar_hvr">CBP</a>
                   </li>
                 </ul>
               </div>
