--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <nav class="navbar navbar-expand-lg">
           <a
             class="navbar-brand page-scroll animation"
-            href="#home_section"
+            href="https://rivera.money/"
             data-animation="fadeInDown"
             data-animation-delay="1s"
           >
