--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
       content="Cryptocash is Professional Creative Template"
     /> -->
     <!-- SITE TITLE -->
-    <title>Rivera</title>
+    <title>Rivera - One stop solution for DeFi Investments</title>
     <meta name="description"
-    content="Invest in DeFi market with a click and earn industry leading returns on your crypto portfolio.">
+    content="A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in a secure and intuitive crypto wallet.">
+    <meta property="og:title" content="Rivera - One stop solution for DeFi Investments">
+    <meta property="og:description"
+        content="A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in a secure and intuitive crypto wallet.">
+    <meta property="og:image" content="/assets/images/luxury_bggg.png">
+   
     <!-- Favicon Icon -->
     <!-- <link
       rel="shortcut icon"
@@ -237,7 +242,7 @@
                 data-animation-delay="1.1s"
               ></li>
             </ul>
-            <ul class="navbar-nav nav_btn align-items-center txt_wht mt_5">
+            <ul class="navbar-nav mt_20_mbl nav_btn txt_wht mt_5">
               <li
                 class="animation"
                 data-animation="fadeInDown"
@@ -286,12 +291,12 @@
                   <!-- <h1 class="mobile_vault_hero-title text-white">
                       Secure, Convenient and <br class="mob_hidden"> Private Vault for all <span>Valuables</span>
                   </h1> -->
-                  <h1 class="industies_hero-title text-white text-extraBold mb-4">
+                  <h1 class="industies_hero-title text-white text-extraBold mb-5">
                     Mobile gateway for <br>
                     cross-chain yield strategies
                   </h1>
                   <p class="mobile_vault_hero-para px-0 text-white">
-                    A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in secure and intutive crypto wallet.
+                    A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in a secure and intuitive crypto wallet.
                   </p>
                   <div class="btn_group pt-3 pb-3">
                     <button type="submit" name="submit2" id="submit2"  class="btn btn-default btn-radius nav-link content-popup" onclick="window.location.href='#earlyAccess';">
@@ -369,7 +374,7 @@
       <div class="custom-container">
 
         <div class="row align-items-center investment_backgrnd">
-          <div class="col-lg-6 col-md-12 col-sm-12 res_md_mt_30 res_sm_mt_20">
+          <div class="col-lg-7 col-md-12 col-sm-12 res_md_mt_30 res_sm_mt_20">
             <div>
               <div class="list_inner">
                 <div>
@@ -390,7 +395,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-md-12 col-sm-12">
+          <div class="col-lg-5 col-md-12 col-sm-12">
             <div class="abt_img_pos">
               <img class="aboutimg2"
                 src="assets/images/about_img2.png"
@@ -481,23 +486,32 @@
   </div>
     <div class="gateWay_flex_mobile">
       <div class="gateWay_flex_mobile_inner mb-5 mt-5">
-        <div class="mb-3 sl_img_pddng"><img class="product_listing_backgrnd_mbl_img" src="assets/images/offer1.png"></div>
-        <div class="list_header mb-1">RIVERA</div>
-        <div class="list_header mb-2">Crypto Wallet &  Strategy Marketplace​</div>
+        <div class="mb-3 sl_img_pddng">
+          <img class="product_listing_backgrnd_mbl_img mr_15" src="assets/images/offer1.png">
+          <div>
+            <div class="mb-2 gradient_txt"><span class="section_subheader">RIVERA</span><br><span class="list_header_mbl ml-3">Crypto Wallet &  Strategy Marketplace​</span></div>
+          </div>
+        </div>
         <div>An intutive crypto wallet with marketplace for vetted DeFi protocols & yield strategies.​ Secure non-custodial wallet with biometric activated auto-recovery.
         </div>
       </div>
       <div class="gateWay_flex_mobile_inner mb-5">
-        <div class="mb-3 sl_img_pddng"><img class="product_listing_backgrnd_mbl_img" src="assets/images/offer2.png"></div>
-        <div class="list_header mb-1">SEAL</div>
-        <div class="list_header mb-2">Cross-chain Yield Farming Protocol​​​</div>
+        <div class="mb-3 sl_img_pddng">
+          <img class="product_listing_backgrnd_mbl_img" src="assets/images/offer2.png">
+          <div>
+            <div class="mb-2 gradient_txt"><span class="section_subheader">SEAL</span><br><span class="list_header_mbl ml-3">Cross-chain Yield Farming Protocol​</span></div>
+          </div>
+        </div>
         <div>Earn industry-leading APY on your crypto holdings with our risk-assessed native investment protocol built with combinations of DeFi yield strategies.
         </div>
       </div>
       <div class="gateWay_flex_mobile_inner">
-        <div class="mb-3 sl_img_pddng"><img class="product_listing_backgrnd_mbl_img" src="assets/images/offer3.png"></div>
-        <div class="list_header mb-1">REEF</div>
-        <div class="list_header mb-2">Deep Liquidity Lending Protocol </div>
+        <div class="mb-3 sl_img_pddng">
+          <img class="product_listing_backgrnd_mbl_img" src="assets/images/offer3.png">
+          <div>
+            <div class="mb-2 gradient_txt"><span class="section_subheader">REEF</span><br><span class="list_header_mbl ml-3">Deep Liquidity Lending Protocol​</span></div>
+          </div>
+        </div>
         <div>Enable deep liquidity for your investments. Take loans in a wide range of crypto and synthetic assets without exiting your positions. 
         </div>
       </div>
@@ -1593,7 +1607,7 @@ aria-hidden="true">
       });
     </script> -->
 
-    <script>
+    <!-- <script>
          $(window).on('scroll', function() {
         var scroll = $(window).scrollTop();
 
@@ -1604,7 +1618,7 @@ aria-hidden="true">
         }
 
     });
-    </script>
+    </script> -->
 
     <script type="text/javascript">
       var parallax_offset = document.getElementById("parallax_offset");
@@ -1712,20 +1726,18 @@ aria-hidden="true">
 <script src="assets/js/intlTelInput.js"></script>
 
 <script>
-    var input = document.querySelector("#mobile");
-    window.intlTelInput(input, {
-        geoIpLookup: function (callback) {
-            $.get("http://ipinfo.io", function () { }, "jsonp").always(function (resp) {
-                var countryCode = (resp && resp.country) ? resp.country : "";
-                callback(countryCode);
-            });
-        },
-        hiddenInput: "number",
-        nationalMode: false,
-        placeholderNumberType: "MOBILE",
-        separateDialCode: true,
-        utilsScript: "assets/js/utils.js",
+var input = document.querySelector("#mobile");
+window.intlTelInput(input, {
+  initialCountry: "auto",
+  geoIpLookup: function(callback) {
+    $.get('https://ipinfo.io', function() {}, "jsonp").always(function(resp) {
+      var countryCode = (resp && resp.country) ? resp.country : "us";
+      callback(countryCode);
     });
+  },
+  separateDialCode: true,
+  utilsScript: "assets/js/utils.js" // just for formatting/placeholders etc
+});
 </script>
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
     <!-- <script src="assets/js/mouseleave.js"></script> -->
