--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
     <!-- START SECTION SERVICES -->
     <section id="investment">
-      <div class="custom-container">
+      <div class="custom-container dsk_device">
         <div class="section_subheader text-center section_subheader_res mt_60 mb_80">
           Investors friendly experience
           </div>
@@ -338,6 +338,11 @@
            </div>
         </div>
        </div>
+      </div>
+      <div class="custom-container mbl_device">
+        <div class="section_subheader text-center section_subheader_res mt-5 mb-5">
+          Investors friendly experience
+          </div>
        <div class="gateWay_flex_mobile">
           <div class="gateWay_flex_mobile_inner mb-5">
             <div class="mb-3"><img src="assets/images/inestor_mbl1.png" class="wdt_90"></div>
@@ -370,7 +375,7 @@
 
     
     <!-- START SECTION SERVICES -->
-    <section id="investment" class="mt_100">
+    <section id="investment" class="mt_100_earn">
       <div class="custom-container">
 
         <div class="row align-items-center investment_backgrnd">
@@ -487,9 +492,9 @@
     <div class="gateWay_flex_mobile">
       <div class="gateWay_flex_mobile_inner mb-5 mt-5">
         <div class="mb-3 sl_img_pddng">
-          <img class="product_listing_backgrnd_mbl_img mr_15" src="assets/images/offer1.png">
+          <img class="product_listing_backgrnd_mbl_img mr_20" src="assets/images/offer1.png">
           <div>
-            <div class="mb-2 gradient_txt"><span class="section_subheader">RIVERA</span><br><span class="list_header_mbl ml-3">Crypto Wallet &  Strategy Marketplace​</span></div>
+            <div class="mb-2 gradient_txt text-left"><span class="section_subheader_mob">RIVERA</span><br><span class="list_header_mbl">Crypto Wallet &  Strategy Marketplace​</span></div>
           </div>
         </div>
         <div>An intuitive marketplace for vetted DeFi protocols & yield strategies.​ Secure non-custodial wallet with biometric activated auto-recovery.
@@ -497,9 +502,9 @@
       </div>
       <div class="gateWay_flex_mobile_inner mb-5">
         <div class="mb-3 sl_img_pddng">
-          <img class="product_listing_backgrnd_mbl_img" src="assets/images/offer2.png">
+          <img class="product_listing_backgrnd_mbl_img mr_20" src="assets/images/offer2.png">
           <div>
-            <div class="mb-2 gradient_txt"><span class="section_subheader">SEAL</span><br><span class="list_header_mbl ml-3">Cross-chain Yield Farming Protocol​</span></div>
+            <div class="mb-2 gradient_txt text-left"><span class="section_subheader_mob">SEAL</span><br><span class="list_header_mbl">Cross-chain Yield Farming Protocol​</span></div>
           </div>
         </div>
         <div>Earn industry-leading APY on your crypto with our risk-assessed native investment protocol built with combinations of DeFi yield strategies.
@@ -507,9 +512,9 @@
       </div>
       <div class="gateWay_flex_mobile_inner">
         <div class="mb-3 sl_img_pddng">
-          <img class="product_listing_backgrnd_mbl_img" src="assets/images/offer3.png">
+          <img class="product_listing_backgrnd_mbl_img mr_20" src="assets/images/offer3.png">
           <div>
-            <div class="mb-2 gradient_txt"><span class="section_subheader">REEF</span><br><span class="list_header_mbl ml-3">Deep Liquidity Lending Protocol​</span></div>
+            <div class="mb-2 gradient_txt text-left"><span class="section_subheader_mob">REEF</span><br><span class="list_header_mbl">Deep Liquidity Lending Protocol​</span></div>
           </div>
         </div>
         <div>Enable deep liquidity for your investments. Take loans in a wide range of crypto and synthetic assets without exiting your positions. 
@@ -522,7 +527,7 @@
     <!-- END SECTION SERVICES -->
 
     <!-- START SECTION SERVICES -->
-    <section id="investment" class="small_pt" style="margin-bottom: -30px;">
+    <section id="investment" class="small_pt mrgn_top_mbl" style="margin-bottom: -30px;">
       <div class="custom-container">
         <div class="section_subheader text-center mb-4 hrd_section_res">
           Join the DeFi club
