home page update

--- a/cbp/index.html
+++ b/cbp/index.html
@@ -291,7 +291,7 @@
     <!-- END HEADER -->
 
     <!-- START SECTION BANNER -->
-    <section id="explore_more_id" style="padding: 100px 0px;">
+    <section id="explore_more_id" class="explore_more_pddng">
       <!-- <canvas id="banner_canvas" class="transparent_effect fixed"></canvas> -->
       <div class="container-fluid">
         <div class="row align-items-center justify-content-lg-end">
@@ -334,7 +334,7 @@
     <!-- END SECTION BANNER -->
 
     <!-- START SECTION SERVICES -->
-    <section id="investment" style="padding-top: 10px;">
+    <section id="investment" class="mb_10_mbl" style="padding-top: 10px;">
       <div class="custom-container">
         <div class="flex_cnt">
           <div class="stack_first">
@@ -345,7 +345,7 @@
             <div class="stack_inner_txt mt-4 mb-5">
               Safe overcollateralized bluechip lending. The strategy combines collateralized lending with cross-chain arbitrage to maximize low risk yields.
             </div>
-            <div class="flex_cnt">
+            <div class="flex_cnt_mb">
               <div class="right_border">
                 <span class="stack_inner_txt">APY</span><br />
                 <span class="clr_green">15.8%</span>
@@ -386,7 +386,7 @@
             <div class="stack_inner_txt mt-4 mb-5">
               The strategy combines bluechip lending with Δ neutral strategy to earn consistently higher yields by becoming liquidity provider to short and long farms.
             </div>
-            <div class="flex_cnt">
+            <div class="flex_cnt_mb">
               <div class="right_border">
                 <span class="stack_inner_txt">Long-Term APY</span><br />
                 <span class="clr_green">20.8%</span>
