--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
              </div>
              <div class="mt_80">
               <div class="gateWay_flex_inner_header_16">Educated & risk-assesed positions </div>
-              <div class="line_height_25">With the in-app guide, take educated yield-farming decisions with strategy mechanicm and risks explained</div>
+              <div class="line_height_25">With the in-app guide, take educated yield-farming decisions with strategy mechanism and risks explained</div>
              </div>
          </div>
          <div class="gateWay_flex_inner"><img src="assets/images/mobile_gateway.png"></div>
@@ -353,7 +353,7 @@
           <div class="gateWay_flex_mobile_inner mb-5">
             <div class="mb-3"><img src="assets/images/inestor_mbl2.png" class="wdt_90"></div>
             <div class="list_header mb-2">Educated & risk-assesed positions ​​</div>
-            <div>With the in-app guide, take educated yield-farming decisions with strategy mechanicm and risks explained
+            <div>With the in-app guide, take educated yield-farming decisions with strategy mechanism and risks explained
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner mb-5">
