--- a/cbp/index.html
+++ b/cbp/index.html
@@ -56,6 +56,14 @@
     <link rel="stylesheet" href="/assets/css/intlTelInput.css">
 
     <!-- <link href="/assets/css/scroll.css" rel="stylesheet"> -->
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSV2F5BBHK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-FSV2F5BBHK');
+    </script>
     <!-- End of StatCounter Code -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- <script src="/assets/js/jquery.nicescroll.min.js" type="text/javascript"></script> -->
