--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
 
     <link rel="stylesheet" href="assets/css/intlTelInput.css">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSV2F5BBHK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-FSV2F5BBHK');
+  </script>
+
     <!-- <link href="assets/css/scroll.css" rel="stylesheet"> -->
     <!-- End of StatCounter Code -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
