fav icon update

--- a/cbp/index.html
+++ b/cbp/index.html
@@ -18,11 +18,12 @@
         content="Maximize your return on stablecoins (USDT & USDC) with advanced yield strategies. Withdraw anytime to your bank account.">
     <meta property="og:image" content="/assets/images/hero_side2.png">
     <!-- Favicon Icon -->
-    <!-- <link
+    <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="/assets/images/favicon.png"
-    /> -->
+      href="/assets/images/favicon.ico"
+    />
+    <!-- <link rel="icon" href="/assets/images/favicon.ico"> -->
     <!-- Animation CSS -->
     <link rel="stylesheet" href="/assets/css/animate.css" />
     <!-- Latest Bootstrap min CSS -->
@@ -1498,7 +1499,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
                 class="footer_logo mb-3"
               >
                 <a href="#home_section" class="page-scroll">
-                  <img alt="logo" src="/assets/images/logo.png" />
+                  <img alt="logo" src="/assets/images/logo.png" style="width: 130px;" />
                 </a>
               </div>
             </div>
