--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <meta property="og:image" content="/assets/images/luxury_bggg.png">
    
     <!-- Favicon Icon -->
-    <!-- <link
+    <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="assets/images/favicon.png"
-    /> -->
+      href="/assets/images/favicon.ico"
+    />
     <!-- Animation CSS -->
     <link rel="stylesheet" href="assets/css/animate.css" />
     <!-- Latest Bootstrap min CSS -->
@@ -1468,7 +1468,7 @@
                 class="footer_logo mb-3"
               >
                 <a href="#home_section" class="page-scroll">
-                  <img alt="logo" src="assets/images/logo.png" />
+                  <img alt="logo" src="assets/images/logo.png" style="width: 130px;"/>
                 </a>
               </div>
             </div>
