--- a/cbp/index.html
+++ b/cbp/index.html
@@ -16,6 +16,7 @@
     <meta property="og:title" content="Earn up to 21% APY on stablecoins">
     <meta property="og:description"
         content="Maximize your return on stablecoins (USDT & USDC) with advanced yield strategies. Withdraw anytime to your bank account.">
+    <meta name="keywords" content="stablecoin yield, best yields on stablecoin, maximum return on stablecoins, strategy marketplace">
     <meta property="og:image" content="/assets/images/hero_side2.png">
     <!-- Favicon Icon -->
     <link
@@ -393,7 +394,7 @@
               Δ Neutral Farming
             </div>
             <div class="stack_inner_txt mt-4 mb-5">
-              The strategy combines bluechip lending with Δ neutral strategy to earn consistently higher yields by becoming liquidity provider to short and long farms.
+              The strategy maximizes return on stablecoins by combining bluechip lending with Δ neutral methods and becoming liquidity providers to both short and long farms to hedge the risks.
             </div>
             <div class="flex_cnt_mb">
               <div class="right_border">
@@ -456,7 +457,7 @@
               <img src="/assets/images/return1.png" />
             </div>
             <div class="gradient_txt sub_header_txt">
-              No volatility, start <br> with stable coins
+              No volatility, start <br> with stablecoins
             </div>
           </div>
           <div class="return_section">
@@ -1176,7 +1177,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
           <div class="wdt_50 wdt_res90">
             <div>
               <div class="list_header fnt_blck mb-4">
-                Our expert team of analysts keep <br> analyzing over 500 assets to <br> bring you only the best!
+                Our expert team of analysts keep <br> analyzing over 500 protocols to <br> bring you only the best!
               </div>
               <div class="expert_subHeader_inner">
                 <div class="list_inner_expert">
@@ -1238,8 +1239,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
                 
               />
               <div class="expert_subHeader text-center">
-                Access asset analysis report and get a 360 overview of the
-                protocol, past performance and assosciated risks
+                Access the asset analysis report and get a 360 overview of the protocol and its past performance to assess risk and reward.
               </div>
             </div>
           </div>
@@ -1255,7 +1255,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
     >
       <div class="custom-container-simple">
         <div class="section_subheader text-center mb-4" style="padding: 30px 0px 0px;">
-          <span class="gradient_txt">Globally </span>
+          <span class="gradient_txt">Fully </span>
           <span style="color: black">Compliant</span>>
         </div>
         <div class="flx_cnt mb-5">
@@ -1426,7 +1426,7 @@ We are building an all-in-one mobile app for all your DeFi needs.
                 Community Building App <br> Launching Soon!
               </div>
               <div class="mt-4 mb_15_res">
-                A custodial crypto wallet and strategy marketplace to earn up to 21% yields on your stablecoin. Signup for early access and get exclusive rewards.
+                A custodial crypto wallet and strategy marketplace to maximize yield on your stablecoins. Signup for early access and get exclusive rewards.
               </div>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
