--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta property="og:title" content="Rivera - One stop solution for DeFi Investments">
     <meta property="og:description"
         content="A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in a secure and intuitive crypto wallet.">
+    <meta name="keywords" content="yield strategy, DeFi wallet, cross-chain strategy, liquidity mining, one stop DeFi solution, strategy marketplace">
     <meta property="og:image" content="/assets/images/luxury_bggg.png">
    
     <!-- Favicon Icon -->
@@ -305,7 +306,7 @@
                     cross-chain yield strategies
                   </h1>
                   <p class="mobile_vault_hero-para px-0 text-white">
-                    A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in a secure and intuitive crypto wallet.
+                    A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in a secure and intuitive DeFi wallet.
                   </p>
                   <div class="btn_group pt-3 pb-3">
                     <button type="submit" name="submit2" id="submit2"  class="btn btn-default btn-radius nav-link content-popup" onclick="window.location.href='#earlyAccess';">
@@ -339,7 +340,7 @@
          <div class="gateWay_flex_inner">
           <div>
             <div class="gateWay_flex_inner_header_16">Marketplace for advance strategies</div>
-            <div class="line_height_25">A marketplace for advanced algorithms operating cross-chain to unleash the true potential of yield farming.</div>
+            <div class="line_height_25">A marketplace for advanced algorithms operating cross-chain to unleash the true potential of yield farming</div>
            </div>
            <div class="mt_80">
             <div class="gateWay_flex_inner_header_16">Bridging to DeFi safely and seamlessly</div>
@@ -604,7 +605,7 @@
               <div class="back">
                 <div class="card">
                     <div class="card-body">
-                        <div>Censorship resistant, your funds are in your control only, even while they are generating yields. Biometric auto-recovery of wallet  and smart contract enabled social recovery for your peace of mind</div>
+                        <div>Censorship resistant, your funds are in your control only, even while they are generating yields. Biometric auto-recovery of wallet  and smart contract enabled social recovery for your peace of mind.</div>
                       </div>
                   </div>
               </div>
@@ -1394,7 +1395,7 @@
                 Community Building App <br> Launching Soon!
               </div>
               <div class="mt-4 mb_15_res">
-                A custodial crypto wallet and strategy marketplace to earn up to 21% yields on your stablecoin. Signup for early access and get exclusive rewards.
+                A custodial crypto wallet and strategy marketplace to maximize yield on your stablecoins. Signup for early access and get exclusive rewards.
               </div>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
