--- a/cbp/index.html
+++ b/cbp/index.html
@@ -1587,7 +1587,7 @@ aria-hidden="true">
                 <div class="col-md-12">
                     <div  class="modal-body ng-star-inserted">
                         <div class="mb-4 mt-2 text-center"><img style="width: 80px;"
-                                 src="/assets/images/popupTick.png"
+                                 src="/assets/images/popupTick.webp"
                                 alt="" class="img-fluid logo-sz">
                         </div>
                         <h4 class="text-center txt_wht" style="font-weight: 600;margin-bottom: 16px;">Enrolled for early access!</h4>
