--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description"
         content="A marketplace for vetted DeFi protocols and risk-assessed yield strategies aggregated in a secure and intuitive crypto wallet.">
     <meta name="keywords" content="yield strategy, DeFi wallet, cross-chain strategy, liquidity mining, one stop DeFi solution, strategy marketplace">
-    <meta property="og:image" content="/assets/images/luxury_bggg.png">
+    <meta property="og:image" content="/assets/images/luxury_bggg.webp">
    
     <!-- Favicon Icon -->
     <link
@@ -336,7 +336,7 @@
               <div class="line_height_25">With the in-app guide, take educated yield-farming decisions with strategy mechanism and risks explained</div>
              </div>
          </div>
-         <div class="gateWay_flex_inner"><img src="assets/images/mobile_gateway.png"></div>
+         <div class="gateWay_flex_inner"><img src="assets/images/mobile_gateway.webp"></div>
          <div class="gateWay_flex_inner">
           <div>
             <div class="gateWay_flex_inner_header_16">Marketplace for advance strategies</div>
@@ -355,25 +355,25 @@
           </div>
        <div class="gateWay_flex_mobile">
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/inestor_mbl1.png" class="wdt_90"></div>
+            <div class="mb-3"><img src="assets/images/inestor_mbl1.webp" class="wdt_90"></div>
             <div class="list_header mb-2">One stop solution for DeFi investment​</div>
             <div>Explore top crypto assets and find  best DeFi opportunities aggregated through one easy-to-use interface
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/inestor_mbl2.png" class="wdt_90"></div>
+            <div class="mb-3"><img src="assets/images/inestor_mbl2.webp" class="wdt_90"></div>
             <div class="list_header mb-2">Educated & risk-assesed positions ​​</div>
             <div>With the in-app guide, take educated yield-farming decisions with strategy mechanism and risks explained
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/inestor_mbl3.png" class="wdt_90"></div>
+            <div class="mb-3"><img src="assets/images/inestor_mbl3.webp" class="wdt_90"></div>
             <div class="list_header mb-2">Marketplace for advance strategies</div>
             <div>A marketplace for advanced algorithms operating cross-chain to unleash the true potential of yield farming
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner">
-            <div class="mb-3"><img src="assets/images/inestor_mblt4.png" class="wdt_90"></div>
+            <div class="mb-3"><img src="assets/images/inestor_mblt4.webp" class="wdt_90"></div>
             <div class="list_header mb-2">Bridging to DeFi safely and seamlessly</div>
             <div>With vetted protocols, biometric auto-recovery wallet, built-in fiat ramp & cross-chain asset swaps; it is DeFi minus complexity
             </div>
@@ -413,7 +413,7 @@
           <div class="col-lg-5 col-md-12 col-sm-12">
             <div class="abt_img_pos">
               <img class="aboutimg2"
-                src="assets/images/about_img2.png"
+                src="assets/images/about_img2.webp"
                 alt="aboutimg2"
               />
             </div>
@@ -446,7 +446,7 @@
             <div class="col-lg-5 col-md-12 col-sm-12">
               <div class="text-right">
                 <img
-                  src="assets/images/offer1.png"
+                  src="assets/images/offer1.webp"
                   alt="aboutimg2" class="product_listing_backgrnd_img"
                 />
               </div>
@@ -469,7 +469,7 @@
           <div class="col-lg-5 col-md-12 col-sm-12">
             <div class="text-right">
               <img
-                src="assets/images/offer2.png"
+                src="assets/images/offer2.webp"
                 alt="aboutimg2" class="product_listing_backgrnd_img"
               />
             </div>
@@ -492,7 +492,7 @@
         <div class="col-lg-5 col-md-12 col-sm-12">
           <div class="text-right">
             <img
-              src="assets/images/offer3.png"
+              src="assets/images/offer3.webp"
               alt="aboutimg2" class="product_listing_backgrnd_img"
             />
           </div>
@@ -502,7 +502,7 @@
     <div class="gateWay_flex_mobile">
       <div class="gateWay_flex_mobile_inner mb-5 mt-5">
         <div class="mb-3 sl_img_pddng">
-          <img class="product_listing_backgrnd_mbl_img mr_20" src="assets/images/offer1.png">
+          <img class="product_listing_backgrnd_mbl_img mr_20" src="assets/images/offer1.webp">
           <div>
             <div class="mb-2 gradient_txt text-left"><span class="section_subheader_mob">RIVERA</span><br><span class="list_header_mbl">Crypto Wallet &  Strategy Marketplace​</span></div>
           </div>
@@ -512,7 +512,7 @@
       </div>
       <div class="gateWay_flex_mobile_inner mb-5">
         <div class="mb-3 sl_img_pddng">
-          <img class="product_listing_backgrnd_mbl_img mr_20" src="assets/images/offer2.png">
+          <img class="product_listing_backgrnd_mbl_img mr_20" src="assets/images/offer2.webp">
           <div>
             <div class="mb-2 gradient_txt text-left"><span class="section_subheader_mob">SEAL</span><br><span class="list_header_mbl">Cross-chain Yield Farming Protocol​</span></div>
           </div>
@@ -522,7 +522,7 @@
       </div>
       <div class="gateWay_flex_mobile_inner">
         <div class="mb-3 sl_img_pddng">
-          <img class="product_listing_backgrnd_mbl_img mr_20" src="assets/images/offer3.png">
+          <img class="product_listing_backgrnd_mbl_img mr_20" src="assets/images/offer3.webp">
           <div>
             <div class="mb-2 gradient_txt text-left"><span class="section_subheader_mob">REEF</span><br><span class="list_header_mbl">Deep Liquidity Lending Protocol​</span></div>
           </div>
@@ -554,7 +554,7 @@
                   <div class="card-body text-center">
                     <div class="list_header txt_algn_lft">Deep liquidity on your investments</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/gateway111.png" class="flt_lft" />
+                      <img src="assets/images/gateway111.webp" class="flt_lft" />
                     </div>
                   </div>
                 </div>
@@ -576,7 +576,7 @@
                   <div class="card-body text-center">
                     <div class="list_header txt_algn_lft">Community owned and governed</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/gateway222.png" class="flt_lft" />
+                      <img src="assets/images/gateway222.webp" class="flt_lft" />
                     </div>
                   </div>
                 </div>
@@ -597,7 +597,7 @@
                   <div class="card-body text-center">
                     <div class="list_header txt_algn_lft">Your funds always in your control</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/gateway2.png" class="flt_lft" />
+                      <img src="assets/images/gateway2.webp" class="flt_lft" />
                     </div>
                   </div>
                 </div>
@@ -618,7 +618,7 @@
                   <div class="card-body text-center">
                     <div class="list_header txt_algn_lft">Trust-free environment</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/gateway3.png" class="flt_lft" />
+                      <img src="assets/images/gateway3.webp" class="flt_lft" />
                     </div>
                   </div>
                 </div>
@@ -1557,7 +1557,7 @@ aria-hidden="true">
                 <div class="col-md-12">
                     <div  class="modal-body ng-star-inserted">
                         <div class="mb-4 mt-2 text-center"><img style="width: 80px;"
-                                 src="assets/images/popupTick.png"
+                                 src="assets/images/popupTick.webp"
                                 alt="" class="img-fluid logo-sz">
                         </div>
                         <h4 class="text-center txt_wht" style="font-weight: 600;margin-bottom: 16px;">Enrolled for early access!</h4>
