--- a/homeDemo.html
+++ b/homeDemo.html
@@ -328,7 +328,7 @@
               <div class="line_height_25">With the in-app guide, take educated yield-farming decisions with strategy mechanicm and risks explained</div>
              </div>
          </div>
-         <div class="gateWay_flex_inner"><img src="assets/images/mobile_gateway.png"></div>
+         <div class="gateWay_flex_inner"><img src="assets/images/mobile_gateway.webp"></div>
          <div class="gateWay_flex_inner">
           <div>
             <div class="gateWay_flex_inner_header_16">Marketplace for advance strategies</div>
@@ -342,25 +342,25 @@
        </div>
        <div class="gateWay_flex_mobile">
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/inestor_mbl1.png" class="wdt_90"></div>
+            <div class="mb-3"><img src="assets/images/inestor_mbl1.webp" class="wdt_90"></div>
             <div class="list_header mb-2">One stop solution for DeFi investment​</div>
             <div>Explore top crypto assets and find  best DeFi opportunities aggregated through one easy-to-use interface
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/inestor_mbl2.png" class="wdt_90"></div>
+            <div class="mb-3"><img src="assets/images/inestor_mbl2.webp" class="wdt_90"></div>
             <div class="list_header mb-2">Educated & risk-assesed positions ​​</div>
             <div>With the in-app guide, take educated yield-farming decisions with strategy mechanicm and risks explained
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner">
-            <div class="mb-3"><img src="assets/images/inestor_mbl3.png" class="wdt_90"></div>
+            <div class="mb-3"><img src="assets/images/inestor_mbl3.webp" class="wdt_90"></div>
             <div class="list_header mb-2">Marketplace for advance strategies</div>
             <div>A marketplace for advanced algorithms operating cross-chain to unleash the true potential of yield farming
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner">
-            <div class="mb-3"><img src="assets/images/inestor_mblt4.png" class="wdt_90"></div>
+            <div class="mb-3"><img src="assets/images/inestor_mblt4.webp" class="wdt_90"></div>
             <div class="list_header mb-2">Bridging to DeFi safely and seamlessly</div>
             <div>With vetted protocols, biometric auto-recovery wallet, built-in fiat ramp & cross-chain asset swaps; it is DeFi minus complexity
             </div>
@@ -406,7 +406,7 @@
           <div class="col-lg-6 col-md-12 col-sm-12">
             <div class="abt_img_pos">
               <img class="aboutimg2"
-                src="assets/images/about_img2.png"
+                src="assets/images/about_img2.webp"
                 alt="aboutimg2"
               />
             </div>
@@ -439,7 +439,7 @@
             <div class="col-lg-5 col-md-12 col-sm-12">
               <div class="text-right">
                 <img
-                  src="assets/images/offer1.png"
+                  src="assets/images/offer1.webp"
                   alt="aboutimg2" class="product_listing_backgrnd_img"
                 />
               </div>
@@ -462,7 +462,7 @@
           <div class="col-lg-5 col-md-12 col-sm-12">
             <div class="text-right">
               <img
-                src="assets/images/offer2.png"
+                src="assets/images/offer2.webp"
                 alt="aboutimg2" class="product_listing_backgrnd_img"
               />
             </div>
@@ -485,7 +485,7 @@
         <div class="col-lg-5 col-md-12 col-sm-12">
           <div class="text-right">
             <img
-              src="assets/images/offer3.png"
+              src="assets/images/offer3.webp"
               alt="aboutimg2" class="product_listing_backgrnd_img"
             />
           </div>
@@ -494,7 +494,7 @@
   </div>
     <div class="gateWay_flex_mobile">
       <div class="gateWay_flex_mobile_inner mb-5 mt-5">
-        <div class="mb-3 sl_img_pddng"><img class="product_listing_backgrnd_mbl_img" src="assets/images/offer1.png"></div>
+        <div class="mb-3 sl_img_pddng"><img class="product_listing_backgrnd_mbl_img" src="assets/images/offer1.webp"></div>
         <div class="list_header mb-1">RIVERA</div>
         <div class="list_header mb-2">Crypto Wallet &  Strategy Marketplace​</div>
         <div>An intutive crypto wallet with marketplace for vetted DeFi protocols & yield strategies.​ Secure non-custodial wallet with biometric activated auto-recovery.
@@ -508,7 +508,7 @@
         </div>
       </div>
       <div class="gateWay_flex_mobile_inner">
-        <div class="mb-3 sl_img_pddng"><img class="product_listing_backgrnd_mbl_img" src="assets/images/offer3.png"></div>
+        <div class="mb-3 sl_img_pddng"><img class="product_listing_backgrnd_mbl_img" src="assets/images/offer3.webp"></div>
         <div class="list_header mb-1">REEF</div>
         <div class="list_header mb-2">Deep Liquidity Lending Protocol </div>
         <div>Enable deep liquidity for your investments. Take loans in a wide range of crypto and synthetic assets without exiting your positions. 
@@ -1539,7 +1539,7 @@ aria-hidden="true">
                 <div class="col-md-12">
                     <div  class="modal-body ng-star-inserted">
                         <div class="mb-4 mt-2 text-center"><img style="width: 80px;"
-                                 src="assets/images/popupTick.png"
+                                 src="assets/images/popupTick.webp"
                                 alt="" class="img-fluid logo-sz">
                         </div>
                         <h4 class="text-center txt_wht" style="font-weight: 600;margin-bottom: 16px;">Enrolled for early access!</h4>
