--- a/cbp/index.html
+++ b/cbp/index.html
@@ -20,8 +20,6 @@
       type="image/x-icon"
       href="/assets/images/favicon.ico"
     />
-    <!-- Animation CSS -->
-    <link rel="stylesheet" href="/assets/css/animate.css" />
     <!-- Latest Bootstrap min CSS -->
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css" />
     <!-- Google Font -->
@@ -29,21 +27,6 @@
       href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900"
       rel="stylesheet"
     />
-    <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="/assets/css/font-awesome.min.css" />
-    <!-- ionicons CSS -->
-    <link rel="stylesheet" href="/assets/css/ionicons.min.css" />
-    <!-- cryptocoins CSS -->
-    <link rel="stylesheet" href="/assets/css/cryptocoins.css" />
-    <!--- owl carousel CSS-->
-    <link rel="stylesheet" href="/assets/owlcarousel/css/owl.carousel.min.css" />
-    <link
-      rel="stylesheet"
-      href="/assets/owlcarousel/css/owl.theme.default.min.css"
-    />
-    <!-- Magnific Popup CSS -->
-    <link rel="stylesheet" href="/assets/css/magnific-popup.css" />
-    <link rel="stylesheet" href="/assets/css/spop.min.css" />
     <!-- Style CSS -->
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/responsive.css" />
@@ -61,15 +44,6 @@
     </script>
     <!-- End of StatCounter Code -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/assets/js/parallaxImg.js" type="text/javascript"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.7.6/jquery.nicescroll.min.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"
-      type="text/javascript"
-    ></script>
     <script>
       $(document).ready(function () {
         var isWebkit = navigator && navigator.userAgent.match(/webkit/i);
@@ -77,10 +51,6 @@
         var elements = $("div"),
           elcount = elements.length;
         var scrolling = false;
-        // Replacing the CSS attr(... url)
-        //   elements.css('background-image', function(i){
-        //     return 'url('+$(this).data('img')+')';
-        //   });
         //Add permalinks
         elements.each(function (i) {
           var $t = $(this);
@@ -196,7 +166,7 @@
 
   <body class="v_dark" data-spy="scroll" data-offset="110">
     <!-- START LOADER -->
-    <div id="loader-wrapper">
+    <!-- <div id="loader-wrapper">
       <div id="loading-center-absolute">
         <div class="object" id="object_four"></div>
         <div class="object" id="object_three"></div>
@@ -205,7 +175,7 @@
       </div>
       <div class="loader-section section-left"></div>
       <div class="loader-section section-right"></div>
-    </div>
+    </div> -->
     <!-- END LOADER -->
 
     <!-- START HEADER -->
@@ -219,7 +189,7 @@
               data-animation="fadeInDown"
               data-animation-delay="1s"
             >
-              <img class="logo_light" src="/assets/images/logo.png" alt="logo" />
+              <img class="logo_light" src="/assets/images/logo.webp" alt="logo" />
             </a>
             <button
               class="navbar-toggler animation"
@@ -677,7 +647,7 @@
                 class="footer_logo mb-3"
               >
                 <a href="#home_section" class="page-scroll">
-                  <img alt="logo" src="/assets/images/logo.png" style="width: 130px;" />
+                  <img alt="logo" src="/assets/images/logo.webp" style="width: 130px;" />
                 </a>
               </div>
             </div>
@@ -779,16 +749,16 @@ aria-hidden="true">
     <!-- Latest compiled and minified Bootstrap -->
     <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
     <!-- owl-carousel min js  -->
-    <script src="/assets/owlcarousel/js/owl.carousel.min.js"></script>
+    <!-- <script src="/assets/owlcarousel/js/owl.carousel.min.js"></script> -->
     <!-- magnific-popup min js  -->
     <!-- waypoints min js  -->
-    <script src="/assets/js/waypoints.min.js"></script>
+    <!-- <script src="/assets/js/waypoints.min.js"></script> -->
     <!-- parallax js  -->
-    <script src="/assets/js/parallax.js"></script>
+    <!-- <script src="/assets/js/parallax.js"></script> -->
     <!-- countdown js  -->
     <script src="/assets/js/jquery.countdown.min.js"></script>
     <!-- particles min js  -->
-    <script src="/assets/js/particles.min.js"></script>
+    <!-- <script src="/assets/js/particles.min.js"></script> -->
     <!-- scripts js -->
     <script src="/assets/js/jquery.dd.min.js"></script>
     <!-- jquery.counterup.min js -->
