--- a/homeDemo.html
+++ b/homeDemo.html
@@ -199,7 +199,7 @@
             data-animation="fadeInDown"
             data-animation-delay="1s"
           >
-            <img class="logo_light" src="assets/images/logo.png" alt="logo" />
+            <img class="logo_light" src="assets/images/logo.webp" alt="logo" />
           </a>
           <button
             class="navbar-toggler animation"
@@ -570,7 +570,7 @@
                 class="footer_logo mb-3"
               >
                 <a href="#home_section" class="page-scroll">
-                  <img alt="logo" src="assets/images/logo.png" />
+                  <img alt="logo" src="assets/images/logo.webp" />
                 </a>
               </div>
             </div>
