--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <meta
-      name="description"
-      content="Cryptocash is Professional Creative Template"
-    /> -->
+
     <!-- SITE TITLE -->
     <title>Rivera - One stop solution for DeFi Investments</title>
     <meta name="description"
@@ -25,9 +22,6 @@
       type="image/x-icon"
       href="/assets/images/favicon.ico"
     />
-    <!-- Animation CSS -->
-    <link rel="stylesheet" href="assets/css/animate.css" />
-    <!-- Latest Bootstrap min CSS -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <!-- Google Font -->
     <link
@@ -35,20 +29,6 @@
       rel="stylesheet"
     />
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
-    <!-- ionicons CSS -->
-    <link rel="stylesheet" href="assets/css/ionicons.min.css" />
-    <!-- cryptocoins CSS -->
-    <link rel="stylesheet" href="assets/css/cryptocoins.css" />
-    <!--- owl carousel CSS-->
-    <link rel="stylesheet" href="assets/owlcarousel/css/owl.carousel.min.css" />
-    <link
-      rel="stylesheet"
-      href="assets/owlcarousel/css/owl.theme.default.min.css"
-    />
-    <!-- Magnific Popup CSS -->
-    <link rel="stylesheet" href="assets/css/magnific-popup.css" />
-    <link rel="stylesheet" href="assets/css/spop.min.css" />
     <!-- Style CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
@@ -65,20 +45,8 @@
     gtag('js', new Date());
     gtag('config', 'G-FSV2F5BBHK');
   </script>
-
-    <!-- <link href="assets/css/scroll.css" rel="stylesheet"> -->
     <!-- End of StatCounter Code -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- <script src="assets/js/jquery.nicescroll.min.js" type="text/javascript"></script> -->
-    <script src="assets/js/parallaxImg.js" type="text/javascript"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.7.6/jquery.nicescroll.min.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"
-      type="text/javascript"
-    ></script>
     <script>
       $(document).ready(function () {
         var isWebkit = navigator && navigator.userAgent.match(/webkit/i);
@@ -86,10 +54,6 @@
         var elements = $("div"),
           elcount = elements.length;
         var scrolling = false;
-        // Replacing the CSS attr(... url)
-        //   elements.css('background-image', function(i){
-        //     return 'url('+$(this).data('img')+')';
-        //   });
         //Add permalinks
         elements.each(function (i) {
           var $t = $(this);
@@ -205,7 +169,7 @@
 
   <body class="v_dark" data-spy="scroll" data-offset="110">
     <!-- START LOADER -->
-    <div id="loader-wrapper">
+    <!-- <div id="loader-wrapper">
       <div id="loading-center-absolute">
         <div class="object" id="object_four"></div>
         <div class="object" id="object_three"></div>
@@ -214,7 +178,7 @@
       </div>
       <div class="loader-section section-left"></div>
       <div class="loader-section section-right"></div>
-    </div>
+    </div> -->
     <!-- END LOADER -->
 
     <!-- START HEADER -->
@@ -227,7 +191,7 @@
             data-animation="fadeInDown"
             data-animation-delay="1s"
           >
-            <img class="logo_light" src="assets/images/logo.png" alt="logo" />
+            <img class="logo_light" src="assets/images/logo.webp" alt="logo" />
           </a>
           <button
             class="navbar-toggler animation"
@@ -242,7 +206,6 @@
             style="background: transparent;"
           >
           <img src="assets/images/top_menu_icon.png">
-            <!-- <span class="ion-android-menu"></span> -->
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto">
@@ -394,7 +357,7 @@
               <div class="list_inner">
                 <div>
                   <div>
-                    <img src="assets/images/tag.png" class="img_tag">
+                    <img src="assets/images/tag.webp" class="img_tag">
                   </div>
                   <div class="section_subheader mb-2">Earn up to 21% APY on your stablecoins</div>
                   <div class="mb-4">
@@ -1469,7 +1432,7 @@
                 class="footer_logo mb-3"
               >
                 <a href="#home_section" class="page-scroll">
-                  <img alt="logo" src="assets/images/logo.png" style="width: 130px;"/>
+                  <img alt="logo" src="assets/images/logo.webp" style="width: 130px;"/>
                 </a>
               </div>
             </div>
@@ -1591,17 +1554,17 @@ aria-hidden="true">
     <!-- Latest compiled and minified Bootstrap -->
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <!-- owl-carousel min js  -->
-    <script src="assets/owlcarousel/js/owl.carousel.min.js"></script>
+    <!-- <script src="assets/owlcarousel/js/owl.carousel.min.js"></script> -->
     <!-- magnific-popup min js  -->
     <!-- <script src="assets/js/magnific-popup.min.js"></script> -->
     <!-- waypoints min js  -->
-    <script src="assets/js/waypoints.min.js"></script>
+    <!-- <script src="assets/js/waypoints.min.js"></script> -->
     <!-- parallax js  -->
-    <script src="assets/js/parallax.js"></script>
+    <!-- <script src="assets/js/parallax.js"></script> -->
     <!-- countdown js  -->
     <script src="assets/js/jquery.countdown.min.js"></script>
     <!-- particles min js  -->
-    <script src="assets/js/particles.min.js"></script>
+    <!-- <script src="assets/js/particles.min.js"></script> -->
     <!-- scripts js -->
     <script src="assets/js/jquery.dd.min.js"></script>
     <!-- jquery.counterup.min js -->
